<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi_camera_imu</name>
  <version>0.1.0</version>
  <description>ROS2 package for synchronized IMX296 camera and BMI088 IMU capture via Pico</description>
  <maintainer email="pi@raspberry.local">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Message synchronization -->
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
